[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/LightFlair.gd" type="Script" id=1]
[ext_resource path="res://assets/placeholder/flare_light_placeholder_01.png" type="Texture" id=2]
[ext_resource path="res://other/color_gradients/LightFlair.tres" type="Gradient" id=4]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.550459, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.669725, 0.669725, 0.669725, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=8]
gradient = SubResource( 7 )
width = 500
height = 500
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0, 0.5 )

[sub_resource type="Animation" id=2]
resource_name = "Flair"
length = 7.1

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="GradientTexture" id=4]
gradient = ExtResource( 4 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.25
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 4 )

[sub_resource type="CircleShape2D" id=6]
radius = 96.0052

[node name="LightFlair" type="Light2D"]
light_mask = 3
texture = SubResource( 8 )
texture_scale = 0.5
color = Color( 0.882353, 0.890196, 0.662745, 1 )
range_height = 136.2
shadow_enabled = true
shadow_filter = 5
shadow_filter_smooth = 10.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
z_index = 3
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flair = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 3000
lifetime = 1.2
one_shot = true
speed_scale = 2.0
explosiveness = 0.05
randomness = 0.5
process_material = SubResource( 5 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 6 )

[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_DetectionArea_area_exited"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
